<resources>
    <string name="app_name">MDC Sample</string>

    <string name="username_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="help_text">assistive text</string>
    <string name="button_next">Next</string>
    <string name="cancel_button">Cancel</string>

    <string name="password_error">error message</string>

    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>

    <string name="product_title">title</string>
    <string name="product_description">description text</string>


    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>